# Characteristics1D

./: .gitignore  CMakeLists.txt  KL_config_isaac  KL_config_legi  README.md  README_runsOnBigMemory.txt  README_runsOn_Campus.txt  Target.vcxproj  Target.vcxproj.filters  _baseName_WOExt_oihf_elastic1.inst  _baseName_WOExt_oihf_fracture1.inst  _command_line.txt  main.cpp  makefile  slscript.sh  slscript_big_mem.sh  slscript_campus.sh  slscript_sigma.sh
Studies/: Mesh_x_resolution_F.docx  SVE_1D_analysis.xlsx  delc_study.xlsx  delt_convergenceStudies.xlsx  fx.m  timeFailure.m  xt_resolution_axt.xlsx
TestFiles/: TestDirac_deltFactorGiven.txt  TestDirac_timeGiven.txt  TestInhomogeneousElasticFractorField_config.txt  TestInhomogeneousElasticFractorField_elastic_base1.inst  TestInhomogeneousElasticFractorField_elastic_base1_2.txt  TestInhomogeneousElasticFractorField_fracture_base1.inst  TestInhomogeneousElasticFractorField_fracture_base1_2.txt  TestInhomogeneousElasticFractorField_fracture_iniDamage.inst  TestInhomogeneousElasticFractorField_fracture_iniDamage_2.txt  TestInhomogeneousElasticFractorField_index.txt  TestInhomogeneousElasticFractorField_x.txt  TestOrtiz1D.out  TestOrtiz1D.txt  TestOrtiz1D_central_does_not_work.out  TestOrtiz1D_central_does_not_work.txt  TestOrtiz1D_debug.out  TestOrtiz1D_debug.txt  TestOrtiz1D_debug_1.txt  TestOrtiz1D_debug_2.txt  TestOrtiz1D_debug_3.txt  TestPoint_Fracture.txt  TestPoint_Fracture_adaptivity.txt  TestPoint_Fracture_finalSolution.txt  TestPoint_Fracture_iterationConv.txt  TestPoint_Fracture_scalars.txt  TestPoint_No_Fracture.txt  (+24 more)
(+245 files in other folders)
